<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="407dp"
        android:layout_height="355dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/showAppsScrollView"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,NotSibling"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title"
                android:layout_width="385dp"
                android:layout_height="68dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/hier_w_hlst_du_aus_welche_apps_von_der_sperre_betroffen_sein_sollen" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileName"
                    android:layout_width="385dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:hint="@string/name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/maxSpeed"
                    android:layout_width="385dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:hint="@string/maximale_geschwindigkeit" />

            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/showNotification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/benachrichtigungen_anzeigen"
                android:textAlignment="center"

                android:textSize="16sp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
            <Switch
                android:id="@+id/readNotification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/benachrichtigungen_vorlesen"
                android:textAlignment="center"

                android:textSize="16sp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


            <Button
                android:id="@+id/showApps"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/apps_bockieren" />


            <Button
                android:id="@+id/saveData"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/speichern" />


        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/showAppsScrollView"
        android:layout_width="match_parent"
        android:layout_height="376dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:id="@+id/showAppsLin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>